--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
            <div class="row g-5 py-5 row-cols-1 row-cols-2">
                 <div class="col order-last order-lg-first">
                     <h1 class="display-5 fw-bold lh-1 mb-3">Rewind: A Coding Project</h1>
-                    <h4 class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod amet eveniet quia debitis sit accusamus suscipit vitae, facere quos dolorem corporis cumque exercitationem dicta architecto, atque ipsa. Vitae, corrupti laudantium.
+                    <h4 class="lead">There and back again. A Javascript coding exercise using arrays. Write a program that display a string in reverse.
                         <strong>BOLD.</strong>
                     </h4>
                     <ul class="fa-ul pt-2 checklist">
@@ -65,8 +65,8 @@
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Loops</li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Functions</li>
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Dom Manipulation</li>
-                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript IF/THEN/ELSE</li>
-                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Boolean Logic</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Arrays</li>
+
 
                     </ul>
                     <div>
@@ -84,8 +84,9 @@
                         </div>
                     </h5>
                 </div>
-                <div class="col">
-                    <img src="img/GcenterLogo.svg" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="700" height="500">
+                <!-- Logo Goes Below -->
+                <div class="col d-flex align-content-center">
+                    <img src="img/REWIND.svg" class="img-fluid center-block d-block mx-auto" alt="Rewind Logo" width="700" height="500">
                 </div>
            </div>
        </div>
