--- a/app.html
+++ b/app.html
@@ -23,7 +23,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="img/GT_Logo.svg" class="d-inline-block align-text-top" width="30" height="24" >Rewind</a>
+        <a class="navbar-brand" href="#"><img src="img/GT_Logo.svg" class="d-inline-block align-text-top" width="30" height="24" > Rewind</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -52,8 +52,20 @@
     </nav>
     <!-- Main Section -->
     <main class="flex-shrink-0">
-        <div class="container">
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col">
+                    <h1 class="display-5 fw-bold lh-1 mb-3">
+                        Rewind: A Coding Project
+                    </h1>
+                    <h4 class="lead">
+                        There and back again. A Javascript coding exercise using arrays. Write a program that display a string in reverse.
+                    </h4>
+                </div>
+                <div class="col">
 
+                </div>
+            </div>
         </div>
     </main>
     <!-- Footer -->
