--- a/app.html
+++ b/app.html
@@ -53,17 +53,32 @@
     <!-- Main Section -->
     <main class="flex-shrink-0">
         <div class="container mt-5">
-            <div class="row">
+            <div class="row row-cols-1 row-cols-lg-2">
                 <div class="col">
                     <h1 class="display-5 fw-bold lh-1 mb-3">
                         Rewind: A Coding Project
                     </h1>
-                    <h4 class="lead">
+                    <h4 class="lead pb-3">
                         There and back again. A Javascript coding exercise using arrays. Write a program that display a string in reverse.
                     </h4>
                 </div>
                 <div class="col">
-
+                    <h5 class="border-1 border-bottom border-danger">Enter A String To Reverse</h5>
+                    <form class="row gx-3 gy-2">
+                        <div class="col">
+                            <input id="userString" type="text" class="form-control" placeholder="Enter A String" aria-label="Enter A String"> 
+                        </div>
+                        <div class="col-12">
+                            <button id="btnSubmit" class="btn btn-danger" type="button">Reverse Me</button>
+                        </div>
+                        <div class="alert alert-danger mt-5 invisible fade show" id="alert" role="alert">
+                            <h4 class="alert-heading">Your String is Reversed</h4>
+                            <hr>
+                            <p class="mb-0" id="msg">
+                                <!-- Insert a Message Here -->
+                            </p>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
